--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
             <div class="container">
                 <div class="header-wrapper">
                     <img class="header-logo" width="190" height="84" src="./images/site-logo.svg" alt="site-logo">
-                    <form>
-                        <input type="text">
+                    <form class="header-form">
+                        <input class="header-input" type="text" placeholder="Поиск">
+                        <button class="header-search">
+                        </button>
                     </form>
+
+                    
                 </div>
             </div>
         </div>
