--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    
+    <header class="site-header">
+        <div class="header-top">
+            <div class="container">
+                <div class="header-wrapper">
+                    <img class="header-logo" width="190" height="84" src="./images/site-logo.svg" alt="site-logo">
+                    <form>
+                        <input type="text">
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="header-bottom">
+            <div class="container">
+
+            </div>
+        </div>
+    </header>
 </body>
 </html>
